# basalt

./: .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.rst  pixi.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
basalt/: __init__.py
basalt/_core/: __init__.py  _core.pyi
docs/: api.rst  changelog.rst  concepts.rst  conf.py  contributing.rst  format.rst  index.rst  install.rst  meshing.rst  nx.rst  requirements.txt  usage.rst
docs/_static/: custom.css  export_attrs.cs
docs/_templates/: layout.html
docs/notebooks/tutorials/: w7x_neutronics.ipynb
examples/: occ_assembly.cpp  occ_blanket_mesh.cpp  parasolid_assembly.cpp  parasolid_mesh_simple.cpp  partRelations_Parasolid.cpp
nx_journals/: export_attrs.cs  restructure_w7x.cs
phnx/: __init__.py
phnx/_core/: __init__.py
pysms/: __init__.py
src/: Mesh.cpp  basalt.cpp  basalt.h  init.cpp  init.h  phnx.cpp  phnx.h  sms.cpp  sms.h
src/python/: nbbasalt.cpp  nbphnx.cpp  pysms.cpp
tests/: __init__.py  conftest.py  test_centroid_matching.py  test_meshcase.py  test_smoke.py  test_type2_flat_part.py
tests/data/: README.rst  scaled_w7x_stellarator.step  scaled_w7x_stellarator.x_t  scaled_w7x_stellarator_attrs.json
