[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pysms"
authors = [{ name = "Alex Koen" }]
# dynamic = ["version"]
version = "1.0.0"
description = "Meshing library for nuclear workflows."
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.build-backend]
module-name = "pysms"
module-root = ""


[tool.ruff]
target-version = "py312"
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [
    "E",
    "W",
    "I",
    "N",
    "A",
    "B",
    "F",
    "D",
    "FBT",
    "C4",
    "SIM",
    "TD",
    "PL",
    "TRY",
    "NPY",
    "PERF",
    "RUF",
]
ignore = [
    "TRY003",  # Exception with string (vs. defining custom exception)
    "PLR2004", # Magic number
]
pydocstyle.convention = "google"

[tool.pyright]
pythonVersion = "3.11"
