[build-system]
requires = [
    "scikit-build-core>=0.10",
    "nanobind>=2.9.2,<3",
    "nanobindgen>=0.2.0,<1",
]
build-backend = "scikit_build_core.build"

[project]
name = "basalt-mesh"
authors = [{ name = "Alex Koen" }]
# dynamic = ["version"]
version = "0.2"
description = "Nuclear meshing library for NX and Parasolid based on the Simmetrix mesh suite"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.rst"
requires-python = ">=3.12"

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.15"
cmake.build-type = "RelWithDebInfo"
build-dir = "build/{wheel_tag}"
wheel.packages = ["basalt"]
# Rebuild the C++ extension automatically when a source file changed and the
# package is imported (editable installs only; ignored by sdist/wheel installs).
# Requires cmake + ninja in the runtime env (see pixi.toml [dependencies]).
# build-dir above must stay persistent so the CMake cache survives between imports.
editable.rebuild = true
# nanobind installs its own CMake config under <site-packages>/nanobind/cmake; the
# top-level CMakeLists.txt finds it via execute_process(... -m nanobind --cmake_dir).

[tool.scikit-build.sdist]
# scikit-build-core walks the filesystem and respects only `.gitignore` /
# `.git/info/exclude` (not the user's global gitignore), so we explicitly
# exclude proprietary content and developer-only artifacts that may be
# untracked-but-present (Claude Code worktrees, local-only design specs, etc.).
exclude = [
    "include/**",
    "lib/**",
    "TheaEnergy*",
    "*.lic",
    "simmodsuite.lic",
    "tests/data/*.x_t",
    "tests/data/*.step",
    "tests/data/*.json",
    "docs/_static/*.pdf",
    ".envrc",
    ".claude/**",
    "docs/superpowers/**",
    ".pixi/**",
    "wheelhouse/**",
    "dist/**",
    "scratch/**",
]


[tool.ruff]
target-version = "py312"
extend-include = ["*.ipynb"]
# basalt/_core/_core.pyi is nanobindgen-generated; we don't control its style.
extend-exclude = ["basalt/_core/_core.pyi"]


[tool.ruff.lint]
select = [
    "E",
    "W",
    "I",
    "N",
    "A",
    "B",
    "F",
    "D",
    "FBT",
    "C4",
    "SIM",
    "TD",
    "PL",
    "TRY",
    "NPY",
    "PERF",
    "RUF",
]
ignore = [
    "TRY003",  # Exception with string (vs. defining custom exception)
    "PLR2004", # Magic number
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tutorial notebooks define small inline helpers for didactic flow; library-style
# docstrings would add noise without value. `display` from IPython.display
# legitimately shadows the IPython builtin name.
"docs/notebooks/**/*.ipynb" = ["D103", "A004"]

[tool.pyright]
pythonVersion = "3.11"
